--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tests</title>
+    <title>Party Time</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="masterContainer">
+      <a id="toggler1" class="off" href="#">ON</a>
     <div class="container">
-      <div class="controller">
-        <a id="toggler1" class="off" href="#">ON</a>
-      </div>
+        
       <div class="party">
         <h4 class="textParty">Party!</h4>
         <h3 class="textParty">Party!</h3>
